changed doubel quotes to singles

--- a/capstone-project.ipynb
+++ b/capstone-project.ipynb
@@ -39,10 +39,10 @@
    "outputs": [],
    "source": [
     "def QualiScrape(grandPrix, raceDate, qualiDate):\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    Input: grandPrix, Grand Prix's Race Date, Date of Qualifying\n",
     "    Returns: data frame with each driver matched to best qualifying time, along with tire and weather conditions\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    #Build path to scrape data from\n",
     "    Quali = fastf1.api.make_path(grandPrix, raceDate, 'Qualifying', qualiDate)\n",
     "    \n",
@@ -61,23 +61,23 @@
     "    #Since dataframe is organized by driver and then time, we can replace empty entries with the previous tire compound\n",
     "    #Also, dataframe sometime doubles on driver-time combo, so removing the unnecessary ones\n",
     "    for index in range(len(QualiTimingApp)):\n",
-    "        if not QualiTimingApp.loc[index,\"Compound\"]:\n",
-    "            QualiTimingApp.loc[index, \"Compound\"] = QualiTimingApp.loc[index-1, \"Compound\"]\n",
-    "        if not QualiTimingApp.loc[index,\"New\"]:\n",
-    "            QualiTimingApp.loc[index,\"New\"] = False\n",
+    "        if not QualiTimingApp.loc[index,'Compound']:\n",
+    "            QualiTimingApp.loc[index, 'Compound'] = QualiTimingApp.loc[index-1, 'Compound']\n",
+    "        if not QualiTimingApp.loc[index,'New']:\n",
+    "            QualiTimingApp.loc[index,'New'] = False\n",
     "        if index == 0:\n",
     "            continue\n",
-    "        if QualiTimingApp.loc[index,\"Time\"] == QualiTimingApp.loc[index-1,\"Time\"]:\n",
-    "            if not QualiTimingApp.loc[index,\"LapTime\"]:\n",
-    "                QualiTimingApp.loc[index,\"Driver\"] = np.nan\n",
+    "        if QualiTimingApp.loc[index,'Time'] == QualiTimingApp.loc[index-1,'Time']:\n",
+    "            if not QualiTimingApp.loc[index,'LapTime']:\n",
+    "                QualiTimingApp.loc[index,'Driver'] = np.nan\n",
     "            else: \n",
-    "                QualiTimingApp.loc[index-1,\"Driver\"] = np.nan                \n",
+    "                QualiTimingApp.loc[index-1,'Driver'] = np.nan                \n",
     "    QualiTimingApp = QualiTimingApp[QualiTimingApp.Driver.notnull()]\n",
     "    \n",
     "    #Selecting relevant rows\n",
     "    QualiTimingApp >>= select(X.Stint, X.Driver, X.TotalLaps, X.Compound, X.New, X.Time)\n",
     "    QualiTiming = QualiTiming >> mutate(Time = X.Time.round('60s')) >> arrange(X.Driver, X.Time) >> \\\n",
-    "              drop(contains(\"Session\"), X.PitOutTime, X.PitInTime)\n",
+    "              drop(contains('Session'), X.PitOutTime, X.PitInTime)\n",
     "\n",
     "    QualiCompiledTiming = pd.merge(QualiTiming,QualiTimingApp, on=['Time', 'Driver'])\n",
     "\n",
@@ -96,7 +96,7 @@
     "    QualiDF >>= select(X.Driver, X.LapTime)\n",
     "    \n",
     "    #Merge weather and tire data with appropriate laptime data\n",
-    "    QualiDF = pd.merge(QualiDF, QualiCompiledTiming, on = [\"LapTime\", \"Driver\"])\n",
+    "    QualiDF = pd.merge(QualiDF, QualiCompiledTiming, on = ['LapTime', 'Driver'])\n",
     "    \n",
     "    #Removing variables regarded as unnecessary, adding Qualifying prefix to Data so merging stays clean\n",
     "    #Note: Qualifying and Practice are merged by driver, so QualifyingDriver is renamed back to driver\n",
@@ -107,10 +107,10 @@
     "    return QualiDF\n",
     "\n",
     "def practiceScrape(grandPrix, raceDate, pracNum, pracDate):\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    Input: Grand Prix, Grand Prix Date, Which Practice, Which Date\n",
     "    Output: Dataframe with each driver's timed lap matched with tire compound and weather conditions\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    #Make Path to scrape practice data\n",
     "    FP = fastf1.api.make_path(grandPrix, raceDate, f'Practice {pracNum}', pracDate)\n",
     "    \n",
@@ -129,23 +129,23 @@
     "    #Since dataframe is organized by driver and then time, we can replace empty entries with the previous tire compound\n",
     "    #Also, dataframe sometime doubles on driver-time combo, so removing the unnecessary ones\n",
     "    for index in range(len(FPTimingApp)):\n",
-    "        if not FPTimingApp.loc[index,\"Compound\"]:\n",
-    "            FPTimingApp.loc[index, \"Compound\"] = FPTimingApp.loc[index-1, \"Compound\"]\n",
-    "        if not FPTimingApp.loc[index,\"New\"]:\n",
-    "            FPTimingApp.loc[index,\"New\"] = False\n",
+    "        if not FPTimingApp.loc[index,'Compound']:\n",
+    "            FPTimingApp.loc[index, 'Compound'] = FPTimingApp.loc[index-1, 'Compound']\n",
+    "        if not FPTimingApp.loc[index,'New']:\n",
+    "            FPTimingApp.loc[index,'New'] = False\n",
     "        if index == 0:\n",
     "            continue\n",
-    "        if FPTimingApp.loc[index,\"Time\"] == FPTimingApp.loc[index-1,\"Time\"]:\n",
-    "            if not FPTimingApp.loc[index,\"LapTime\"]:\n",
-    "                FPTimingApp.loc[index,\"Driver\"] = np.nan\n",
+    "        if FPTimingApp.loc[index,'Time'] == FPTimingApp.loc[index-1,'Time']:\n",
+    "            if not FPTimingApp.loc[index,'LapTime']:\n",
+    "                FPTimingApp.loc[index,'Driver'] = np.nan\n",
     "            else: \n",
-    "                FPTimingApp.loc[index-1,\"Driver\"] = np.nan                \n",
+    "                FPTimingApp.loc[index-1,'Driver'] = np.nan                \n",
     "    FPTimingApp = FPTimingApp[FPTimingApp.Driver.notnull()]\n",
     "    \n",
     "    #Selecting relevant rows, and rounding FPtiming session time to nearest minute\n",
     "    FPTimingApp >>= select(X.Stint, X.Driver, X.TotalLaps, X.Compound, X.New, X.Time)\n",
     "    FPTiming = FPTiming >> mutate(Time = X.Time.round('60s')) >> arrange(X.Driver, X.Time) >> \\\n",
-    "              drop(contains(\"Session\"), X.PitOutTime, X.PitInTime)\n",
+    "              drop(contains('Session'), X.PitOutTime, X.PitInTime)\n",
     "    \n",
     "    #Merge Dataframes, keyed by time and driver, then dropping irrelevant columns\n",
     "    FPCompiledTiming = pd.merge(FPTiming,FPTimingApp, on=['Time', 'Driver'])\n",
@@ -177,12 +177,12 @@
    "outputs": [],
    "source": [
     "def weekendCompiler(grandPrix, raceDate, sprint = False):\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    Input: Grand Prix with appropriate race date, and whether grand prix was a sprint weekend\n",
     "    Output: Dataframe with all timed practice laps, merged with info about best qualifying lap\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    #Creating relevant dates for session calling purposes\n",
-    "    raceDate = datetime.strptime(raceDate, \"%Y-%m-%d\")\n",
+    "    raceDate = datetime.strptime(raceDate, '%Y-%m-%d')\n",
     "    friDate = str(raceDate - timedelta(days = 2))[:10]\n",
     "    satDate = str(raceDate - timedelta(days = 1))[:10]\n",
     "    raceDate = str(raceDate)[:10]\n",
@@ -231,17 +231,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raceCalendar = {1:[\"Bahrain Grand Prix\", \"2022-03-20\"], 2:[\"Saudi Arabian Grand Prix\", \"2022-03-27\"], 3:[\"Australian Grand Prix\", \"2022-04-10\"],\\\n",
-    "                4:[\"Emilia Romagna Grand Prix\", \"2022-04-24\"], 5:[\"Miami Grand Prix\", \"2022-05-08\"], 6:[\"Spanish Grand Prix\", \"2022-05-22\"], \\\n",
-    "                7:[\"Monaco Grand Prix\", \"2022-05-29\"], 8:[\"Azerbaijan Grand Prix\", \"2022-06-12\"], 9:[\"Canadian Grand Prix\",  \"2022-06-19\"], \\\n",
-    "                10:[\"British Grand Prix\", \"2022-07-03\"], 11:[\"Austrian Grand Prix\", \"2022-07-10\"], 12:[\"French Grand Prix\", \"2022-07-24\"], \\\n",
-    "                13:[\"Hungarian Grand Prix\", \"2022-07-31\"], 14:[\"Belgian Grand Prix\", \"2022-08-28\"], 15:[\"Dutch Grand Prix\", \"2022-09-04\"], \\\n",
-    "                16:[\"Italian Grand Prix\", \"2022-09-11\"], 17:[\"Singapore Grand Prix\", \"2022-10-02\"], 18:[\"Japanese Grand Prix\", \"2022-10-09\"], \\\n",
-    "                19:[\"United States Grand Prix\", \"2022-10-23\"], 20:[\"Mexico City Grand Prix\", \"2022-10-30\"], 21:[\"São Paulo Grand Prix\", \"2022-11-13\"]}\n",
+    "raceCalendar = {1:['Bahrain Grand Prix', '2022-03-20'], 2:['Saudi Arabian Grand Prix', '2022-03-27'], 3:['Australian Grand Prix', '2022-04-10'],\\\n",
+    "                4:['Emilia Romagna Grand Prix', '2022-04-24'], 5:['Miami Grand Prix', '2022-05-08'], 6:['Spanish Grand Prix', '2022-05-22'], \\\n",
+    "                7:['Monaco Grand Prix', '2022-05-29'], 8:['Azerbaijan Grand Prix', '2022-06-12'], 9:['Canadian Grand Prix',  '2022-06-19'], \\\n",
+    "                10:['British Grand Prix', '2022-07-03'], 11:['Austrian Grand Prix', '2022-07-10'], 12:['French Grand Prix', '2022-07-24'], \\\n",
+    "                13:['Hungarian Grand Prix', '2022-07-31'], 14:['Belgian Grand Prix', '2022-08-28'], 15:['Dutch Grand Prix', '2022-09-04'], \\\n",
+    "                16:['Italian Grand Prix', '2022-09-11'], 17:['Singapore Grand Prix', '2022-10-02'], 18:['Japanese Grand Prix', '2022-10-09'], \\\n",
+    "                19:['United States Grand Prix', '2022-10-23'], 20:['Mexico City Grand Prix', '2022-10-30'], 21:['São Paulo Grand Prix', '2022-11-13']}\n",
     "dfList = []\n",
     "for key in raceCalendar:\n",
     "    \n",
-    "    print(f\"Collecting Data for {raceCalendar[key][0]}\")\n",
+    "    print(f'Collecting Data for {raceCalendar[key][0]}')\n",
     "    #Imola, Austria, and Brazil are sprint weekends, so they have a special case where sprint = true\n",
     "    if key not in [4,11,21]:\n",
     "        dfList.append(weekendCompiler(raceCalendar[key][0], raceCalendar[key][1]))\n",
@@ -319,7 +319,7 @@
    "id": "1a1c1bca",
    "metadata": {},
    "source": [
-    "\"Standard\" Neural Network Following General Guidelines "
+    "'Standard' Neural Network Following General Guidelines "
    ]
   },
   {
@@ -669,11 +669,11 @@
    "outputs": [],
    "source": [
     "def genModel(layers, batchSize=32, epochs=100, verbose=2):\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    Automated neural network generator\n",
     "    Input: list of layers, batch size, number of epochs, verbosity\n",
     "    Output: it do the thing\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    model = tf.keras.models.Sequential(layers)\n",
     "    model.compile(optimizer='adam', loss=tf.keras.losses.MSE, metrics=[tf.keras.metrics.MeanSquaredError(),\n",
     "                                                                   tf.keras.metrics.MeanAbsoluteError()])\n",
@@ -691,12 +691,12 @@
    "source": [
     "%matplotlib inline\n",
     "class PlotData():\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    A module for storing plot data in a more portable, reusable form\n",
     "    Stores x and y data and metadata (title, labels, etc.)\n",
     "    Parameters: 2 arrays of x and y datasets (to allow multiple relations per plot), \n",
     "                plot type as a string, title, axis labels, and grid boolean\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    def __init__(self, xdata, ydata, ptype='plot', title='Figure', xlabel='x axis', ylabel='y axis', grid=True):\n",
     "        \n",
     "        # Only check these if we have ydata\n",
@@ -721,10 +721,10 @@
     "        \n",
     "        \n",
     "    def plot(self, style='b--'):\n",
-    "        \"\"\"\n",
+    "        '''\n",
     "        May not be showing it but it do be plotting the data\n",
     "        Input: Optional style\n",
-    "        \"\"\"\n",
+    "        '''\n",
     "        # Plots based on type\n",
     "        if self.ptype == 'plot':\n",
     "            for i in range(len(self.xdata)):\n",
@@ -752,11 +752,11 @@
     "            \n",
     "            \n",
     "    def addData(x, y):\n",
-    "        \"\"\"\n",
+    "        '''\n",
     "        Clears the figure and adds a new x-y relation to the data\n",
     "        Input: x and y data to add\n",
     "        Output: It adds the data wow\n",
-    "        \"\"\"\n",
+    "        '''\n",
     "        plt.clf()\n",
     "        self.xdata.append(x)\n",
     "        self.ydata.append(y)\n",
@@ -772,10 +772,10 @@
    "outputs": [],
    "source": [
     "class Plotter():\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    Takes plot data and auto-generates subplots\n",
     "    Parameters: a list of PlotData objects\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    \n",
     "    def __init__(self, plots, subdim=None):\n",
     "        self.plots = plots\n",
@@ -786,11 +786,11 @@
     "        \n",
     "        \n",
     "    def addPlot(plot, loc=-1, subdim=None):\n",
-    "        \"\"\"\n",
+    "        '''\n",
     "        Adds a new subplot and rearranges the figure\n",
     "        Input: the PlotData to add, the location to display it, and a custom aspect ratio if desired\n",
     "        Output:  It does it\n",
-    "        \"\"\"\n",
+    "        '''\n",
     "        self.plots.insert(loc, plot)\n",
     "        if not subdim == None:\n",
     "            self.subdim = subdim\n",
@@ -799,20 +799,20 @@
     "    \n",
     "    \n",
     "    def addData(x, y, loc):\n",
-    "        \"\"\"\n",
+    "        '''\n",
     "        Adds data to a subplot\n",
     "        Input: x and y data to add, and which subplot to add to\n",
     "        Output: It also does it\n",
-    "        \"\"\"\n",
+    "        '''\n",
     "        self.plots[loc].addData(x, y)\n",
     "    \n",
     "    \n",
     "    def arrange(self, subdim=None):\n",
-    "        \"\"\"\n",
+    "        '''\n",
     "        Helper function to redistrubte subplots to maximize squareness or fulfill user-set dimensions\n",
     "        Input: Optional custom dimensions\n",
     "        Output: :)\n",
-    "        \"\"\"\n",
+    "        '''\n",
     "        if not subdim == None:\n",
     "            # Throw error if there are not enough subplot spaces\n",
     "            if subdim[0] * subdim[1] < len(self.plots):\n",
@@ -827,9 +827,9 @@
     "        \n",
     "                \n",
     "    def plot(self):\n",
-    "        \"\"\"\n",
+    "        '''\n",
     "        Generates the figure\n",
-    "        \"\"\"\n",
+    "        '''\n",
     "        plt.figure(figsize=self.figsize)\n",
     "        for i in range(len(self.plots)):\n",
     "            plt.subplot(self.subdim[0], self.subdim[1], i + 1)\n",
@@ -847,12 +847,12 @@
    "outputs": [],
    "source": [
     "def splitDriverData(weekendDF):\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    Generates a dictionary of driver IDs to driver stats\n",
     "    Input: Dataframe\n",
     "    Output: Dictionary of driver IDs to driver stat dataframe, \n",
     "    which is a subset of the input\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    idList = list(set(weekendDF['Driver'].values))\n",
     "    return {ID : weekendDF.loc[weekendDF['Driver'] == ID] for ID in idList}\n"
    ]
@@ -868,7 +868,7 @@
     "\n",
     "# Split data into a dictionary by race\n",
     "raceNames = [race[0] for race in raceCalendar.values()]\n",
-    "raceDataFrames = {race : plotDataFrame.loc[plotDataFrame[\"Weekend\"] == race] for race in raceNames}\n",
+    "raceDataFrames = {race : plotDataFrame.loc[plotDataFrame['Weekend'] == race] for race in raceNames}\n",
     "\n",
     "# Split dictionary of races further into to dictionaries of driver IDs to driver data\n",
     "# Get a specific stat with driverDataFrames['raceName']['driverID']['field'].values\n",
@@ -891,11 +891,11 @@
    "outputs": [],
    "source": [
     "def getDataField(field):\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    Takes a field name and produces a dictionary of races to \n",
     "    dictionaries of drivers to numpy arrays of driver data\n",
     "    Input: field to extract\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    dataField = {}\n",
     "    buffer = {}\n",
     "    \n",
@@ -924,11 +924,11 @@
    "outputs": [],
    "source": [
     "def plotField(field, saveName=None):\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    Given a field name, generates boxplots for that field for \n",
     "    each driver across each race, optionally saves an image\n",
     "    Input: field to plot, file name to save plot as\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    # Gets nested dictionaries of field\n",
     "    dataField = getDataField(field)\n",
     "    fieldPlotData = []\n",
@@ -996,11 +996,11 @@
    "outputs": [],
    "source": [
     "def barField(field, saveName=None):\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    Given a field name, generates boxplots for that field for \n",
     "    each driver across each race, optionally saves an image\n",
     "    Input: field to plot, file name to save plot as\n",
-    "    \"\"\"\n",
+    "    '''\n",
     "    # Gets nested dictionaries of field\n",
     "    dataField = getDataField(field)\n",
     "    fieldPlotData = []\n",
